[gd_scene format=3 uid="uid://ltubbbjuqn4u"]

[ext_resource type="Script" uid="uid://eoclu0gr4evd" path="res://addons/ez_dialogue/dialogue_resource/DialogueBox.gd" id="1_ycayy"]
[ext_resource type="JSON" path="res://dialogue/sample_dialogue.json" id="2_bw6k5"]
[ext_resource type="Script" uid="uid://d2ctk7y4xw0pv" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="3_y3j0m"]

[sub_resource type="LabelSettings" id="LabelSettings_ycayy"]
font_size = 24

[node name="GameScene_Dialogue" type="Node2D" unique_id=2107874921]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=509706036]

[node name="DialogueBox" type="VBoxContainer" parent="CanvasLayer" unique_id=802478050]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.55
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 0
alignment = 2
script = ExtResource("1_ycayy")
dialogue = ExtResource("2_bw6k5")
state = {
"chiken_mask": 0,
"lamb_mask": 0,
"snake_mask": 0
}

[node name="text" type="Label" parent="CanvasLayer/DialogueBox" unique_id=815811077]
clip_contents = true
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
size_flags_vertical = 3
text = "testsetset
asdfsdfasdfasdfasdf
asdfasdfasdfdasdfasdf
asdfasdf"
label_settings = SubResource("LabelSettings_ycayy")
autowrap_mode = 3
clip_text = true

[node name="EzDialogue" type="Node" parent="CanvasLayer/DialogueBox" unique_id=540485955]
script = ExtResource("3_y3j0m")

[node name="SpriteHandler" type="Node" parent="CanvasLayer/DialogueBox" unique_id=2029860655]

[connection signal="custom_signal_received" from="CanvasLayer/DialogueBox/EzDialogue" to="CanvasLayer/DialogueBox" method="_on_ez_dialogue_custom_signal_received"]
[connection signal="dialogue_generated" from="CanvasLayer/DialogueBox/EzDialogue" to="CanvasLayer/DialogueBox" method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="CanvasLayer/DialogueBox/EzDialogue" to="CanvasLayer/DialogueBox" method="_on_ez_dialogue_end_of_dialogue_reached"]
